<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".DownloadTemplate">

    <TextView
        android:id="@+id/titleDownloadTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDownloadTemplate"
        android:textSize="25dp"/>

    <LinearLayout
        android:id="@+id/orgSpinnerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orgSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_org"/>

        <Spinner
            android:id="@+id/org_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/org_arrays"
            android:prompt="@string/org_prompt"
            android:spinnerMode="dialog"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/roleSpinnerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/roleSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_role"/>

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/role_arrays"
            android:prompt="@string/role_prompt"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formSpinnerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/formSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_form"/>

        <Spinner
            android:id="@+id/form_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/form_arrays"
            android:prompt="@string/form_prompt"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Download Template"/>

</LinearLayout>
